# pendle-pt-yt-mechanism-lab

./: .gitignore  README.md  foundry.toml  main.py  pyproject.toml
data/processed/: py_index_impairment_simulation.csv
notes/: attack-patterns.md  loss-allocation.md  market-boundary.md  mechanism.md  pendle-mechanism-study.md  py-index-floor-study.md
scripts/: foundry_backed_py_index_sim.py
src/harness/: PyIndexHarness.sol  SimplifiedMarketMathHarness.sol
src/mocks/: MockLendingProtocol.sol  MockSY.sol  UnsafeOracleConsumer.sol
test/: MarketBoundary.t.sol  MockLendingOvervaluation.t.sol  OracleConsumerOvervaluation.t.sol  PyIndexFloor.t.sol
